--- a/codebook/polidoc_codebook.tex
+++ b/codebook/polidoc_codebook.tex
@@ -5,7 +5,8 @@
 \usepackage{url} 
 \usepackage{graphicx}
 \usepackage[ansinew]{inputenc}
-\usepackage{lscape}
+\usepackage{pdflscape}
+%\usepackage{lscape}
 \usepackage{longtable}
 
 \begin{document}
@@ -14,21 +15,21 @@
 CODEBOOK \\
 \large
 \medskip
-National and Regional Manifestos Collected for the Research Projects
+National and Regional Manifestos and other Political Documents Collected for the Research Projects
 \\
-“Representation in Europe: Congruence between Preferences of Elites and Voters” \\ (REPCONG)
+"Representation in Europe: Congruence between Preferences of Elites and Voters" \\ (REPCONG)
 \\
 \textit{and} 
 \\
-The Impact of EU Cohesion Policy on European Identification \\ (COHESIFY)
+"The Impact of EU Cohesion Policy on European Identification" \\ (COHESIFY)
 } 
 
 \date{\today}
 
 \author{
 \small
-Prepared by the Polidoc.net Team \\ \small
- headed by Thomas Bräuninger (University of Mannheim), \\ \small
+Prepared by the Polidoc.net Team headed by \\ \small
+ Thomas Bräuninger (University of Mannheim), \\ \small
  Marc Debus (University of Mannheim), \\ \small
  Kenneth Benoit (London School of Economics and Political Science) \\ \small
  and Julian Bernauer (Mannheim Centre for European Social Research)
@@ -39,29 +40,31 @@ Prepared by the Polidoc.net Team \\ \small
 \clearpage
 
 \section{polidoc.net- The Political Documents Archive}
-The Political Documents Archive contains election manifestos, coalition agreements, government declarations and various other documents of political actors from developed democracies. Currently, the archive builds on a stock of more than 3000 political documents from 20 European countries. The aim of the repository is to provide political texts in order to facilitate scholarly research in different areas of comparative politics such as party competition, coalition politics, legislative decision-making or electoral behavior. Furthermore, the archive includes party manifestos for regional elections in several European democracies. Because the process of European integration resulted in a strengthening of regions in EU member states and in countries that want to join the European Union, the relevance of the regional level for political decision-making has increased during the last decades. Therefore, also the policy profiles of regional parties are required to get a full picture of democratic responsiveness in European states across all levels of the political system. The collection of regional manifestos was supported by the COHESIFY project (www.cohesify.eu), funded under the Horizon 2020 Framework Programme for Research and Innovation. The aim of COHESIFY is to study whether the European Structural and Investment Funds affect people’s support for and identification with the European project.
+The Political Documents Archive contains election manifestos, coalition agreements, government declarations and various other documents of political actors from developed democracies. Currently, the archive builds on a stock of more than 3000 political documents from 20 European countries. The aim of the repository is to provide political texts in order to facilitate scholarly research in different areas of comparative politics such as party competition, coalition politics, legislative decision-making or electoral behavior. National electoral manifestos have been collected in the course of the REPCONG project, and the archive includes party manifestos for regional elections in several European democracies. Because the process of European integration resulted in a strengthening of regions in EU member states and in countries that want to join the European Union, the relevance of the regional level for political decision-making has increased during the last decades. Therefore, also the policy profiles of regional parties are required to get a full picture of democratic responsiveness in European states across all levels of the political system. The collection of regional manifestos was supported by the COHESIFY project (www.cohesify.eu), funded under the Horizon 2020 Framework Programme for Research and Innovation. The aim of COHESIFY is to study whether the European Structural and Investment Funds affect people’s support for and identification with the European project.
 
-The archive is freely accessible and meant to foster rigorous research in these areas by enabling scholars to produce valid and reliable findings from empirical studies of textual data rather than unnecessarily struggling to obtain and process texts. While polidoc.net is an open access archive it also aims to establish a network for exchanging and accessing political text data once it has been checked for errors and assured for quality. The archive therefore encourages researchers to share their documents with others. We invite everybody to participate in this project so that the political science community can easily make use of already collected documents.
+The archive is freely accessible (after a simple registration) and meant to foster rigorous research in these areas by enabling scholars to produce valid and reliable findings from empirical studies of textual data rather than unnecessarily struggling to obtain and process texts. While polidoc.net is an open access archive it also aims to establish a network for exchanging and accessing political text data once it has been checked for errors and assured for quality. The archive therefore encourages researchers to share their documents with others. We invite everybody to participate in this project so that the political science community can easily make use of already collected documents.
+
+\clearpage
 
 \section{Countries, elections and parties covered}
 The REPCONG project has collected national electoral manifestos of parties in 20 countries: Austria, Belgium, Czech Republic, Denmark, Estonia, Finland, France, Germany, Ireland, Italy, Luxembourg, Malta, Netherlands, Norway, Poland, Portugal, Spain, Sweden, Switzerland and the United Kingdom. 
-The COHESIFY project has focused on Germany, Greece, Hungary, Ireland, Poland, Romania, Slovenia, Italy, Netherlands, UK and Spain. Polidoc currently houses regional documents from Austria, Belgium, Netherlands, Sweden, Switzerland, Czech Republic, Germany, Spain and the United Kingdom. The time period covered mainly encompassed 1980 onwards for national manifestos and 2000 onwards for regional documents, partially reaching farther back. See below for details. 
+The COHESIFY project has focused on Germany, Greece, Hungary, Ireland, Poland, Romania, Slovenia, Italy, Netherlands, UK and Spain. Polidoc.net currently houses regional documents from Austria, Belgium, Netherlands, Sweden, Switzerland, Czech Republic, Germany, Spain and the United Kingdom. The time period covered mainly encompasses 1980 onwards for national manifestos and 2000 onwards for regional documents, partially reaching farther back. See below for details. 
 
 The selection rules for national documents from western European countries are: 
 \begin{enumerate}
 \item 	Include all parties with at least 1\% of the (valid) votes in the election for which the manifesto was written
 \item 	If the sum of votes covered is less than 95\%, include the next largest parties until 95\% are covered
-\item 	For all parties that sometimes are in the selection and sometimes not, include one additional observation before and after their appearance(s).
+\item 	For all parties that sometimes are in the selection and sometimes not, include one additional observation before and after their appearance(s)
 \end{enumerate}
 
-For Eastern European countries, only steps 1 and 2 from above apply.
+For the post-communist European countries, only steps 1 and 2 from above apply.
 
 
 \section{Sources}
 The main sources include: 
 \begin{itemize}
 \item Zentralarchiv für Empirische Sozialforschung (ZA)
-\item The CMP group
+\item The Comparative Manifesto Project (CMP) group
 \item Internet resources of parties 
 \item Other personal contacts
 \end{itemize}
@@ -69,289 +72,287 @@ The main sources include:
 %Details! 
 
 \section{Archive and file Structure }
-The structure of the files is as follows: Each file is labeled with a 5-digit code (if several elections were held in the same year, a code for the month has to be considered). The codes are based on the rules used by the CMP group as described in Budge et al. (2001: 193).\footnote{Budge, Ian, Hans-Dieter Klingemann, Andrea Volkens, Judith Bara and Eric Tanenbaum. 2001. \textit{Mapping Policy Preferences: Estimates for Parties, Electors and Governments} 1945-1998. Oxford: Oxford University Press.} The first two numbers indicate the country, the next two numbers indicate the party family, while the last one is for the number of the party if several parties of the same party family are coded. Codes for parties previously not covered by the CMP group have been extended to previously uncoded parties following the coding rules of the CMP. 
+The structure of the files is as follows: Each file is labeled with a 5-digit code. The codes are based on the rules used by the CMP group as described in Budge et al. (2001: 193).\footnote{Budge, Ian, Hans-Dieter Klingemann, Andrea Volkens, Judith Bara and Eric Tanenbaum. 2001. \textit{Mapping Policy Preferences: Estimates for Parties, Electors and Governments} 1945-1998. Oxford: Oxford University Press.} The first two numbers indicate the country, the next two numbers indicate the party family, while the last one is for the number of the party if several parties of the same party family are coded. Codes for parties previously not covered by the CMP group have been extended to previously uncoded parties following the coding rules of the CMP. 
 
 
 \section{Formatting Rules for Manifestos}
 
 \begin{enumerate}
-\item Removal of page numbers, headers, footnotes, indexes and registers, keeping titles. 
+\item Starting from a PDF, removal of page numbers, headers, footnotes, donation and membership calls as well as indexes and registers, keeping titles and forewords. 
 \item Removal or correction of unusual characters and formatting resulting from flawed scans or conversions (comparison with PDF of the manifesto).
-\item  Adding missing paragraphs (if possible from original source, preferably PDF).
-\item  Reassembling of hyphenations
+\item Check for and add missing sentences and paragraphs (if possible from original source, preferably PDF).
+\item Reassembling of hyphenations.
 \item Substituting bullet points, enumerations and other structuring characters including Roman and Arabic numerals with a dash (-).
 \item (Uniform) spell check.
-\item Saving texts as Word document (.doc).
 \item Saving of corrected manifestos as non-formatted text files (.txt) with UTF-8 Ascii coding. The format grants cross-platform use of the texts.
 \end{enumerate}
 
 \newpage
 
 \section{Citation}
-The archive is maintained by Thomas Bräuninger (University of Mannheim), Marc Debus (University of Mannheim), Kenneth Benoit (London School of Economics and Political Science) and Julian Bernauer (Mannheim Centre for European Social Research). If data are used in publications etc. please refer to the Political Documents Archive as data source:
+The archive is maintained by Thomas Bräuninger (University of Mannheim), Marc Debus (University of Mannheim), Kenneth Benoit (London School of Economics and Political Science) and Julian Bernauer (Mannheim Centre for European Social Research). If data are used in publications etc. please refer to the Political Documents Archive as the data source by citing:
 
-Kenneth Benoit, Thomas Bräuninger, and Marc Debus. 2009. "Challenges for estimating policy preferences: Announcing an open access archive of political documents." \textit{German Politics} 18(3): 440-453.
+Kenneth Benoit, Thomas Bräuninger and Marc Debus. 2009. "Challenges for estimating policy preferences: Announcing an open access archive of political documents." \textit{German Politics} 18(3): 440-453.
 
 Please refer additionally to the following article when using data of parties from the regional level: 
 
-Martin Gross and Marc Debus. 2017. "Does EU Regional Policy Increase Parties’ Support for European Integration?" \textit{West European Politics} (forthcoming).
+Martin Gross and Marc Debus. 2017. "Does EU regional policy increase parties' support for European integration?" \textit{West European Politics} (forthcoming).
 
 \section{Feedback}
 Please contact us using the form on \url{http://www.polidoc.net}.
 
-\section{Document matrices per country or state}
-The remainder of the documentation provides matrices per country (national/regional), providing information on the elections and parties covered. Further information provided are unique codes for the single parties (using CMP-codes as a point of departure as described above) as well as full party names.
+\section{Coverage}
+The remainder of the documentation provides 1) national and regional lists of party coverage with unique codes for the single parties (using CMP-style codes as a point of departure as described above) and full (English) party names as well as 2) national and regional matrices providing information on the elections covered per party. To locate and download documents, please register and use the query interface on polidoc.net. 
 
 
 \clearpage
 
 \begin{landscape}
 
-\subsection{National documents}
-
+%\subsection{National documents}
 
 %add "`longtable"' in file 
-\input{tab_national}
+\input{tab_national_long}
 
 \end{landscape}
 
 \clearpage
+
+
+\begin{figure}[ht]
+	\centering
+		\includegraphics[width=1\textwidth]{at_nat.eps}
+\end{figure}
+
+\clearpage
+
+\begin{figure}[ht]
+	\centering
+		\includegraphics[width=1\textwidth]{be_nat.eps}
+\end{figure}
+
+
+\clearpage
+
+
+\begin{figure}[ht]
+	\centering
+		\includegraphics[width=1\textwidth]{cz_nat.eps}
+\end{figure}
+
+
+\clearpage
+
+
+\begin{figure}[ht]
+	\centering
+		\includegraphics[width=1\textwidth]{dk_nat.eps}
+\end{figure}
+
+
+\clearpage
+
+
+\begin{figure}[ht]
+	\centering
+		\includegraphics[width=1\textwidth]{ee_nat.eps}
+\end{figure}
+
+
+\clearpage
+
+
+\begin{figure}[ht]
+	\centering
+		\includegraphics[width=1\textwidth]{fi_nat.eps}
+\end{figure}
+
+\clearpage
+
+
+\begin{figure}[ht]
+	\centering
+		\includegraphics[width=1\textwidth]{fr_nat.eps}
+\end{figure}
+
+
+\clearpage
+
+\begin{figure}[ht]
+	\centering
+		\includegraphics[width=1\textwidth]{de_nat.eps}
+\end{figure}
+
+
+\clearpage
+
+\begin{figure}[ht]
+	\centering
+		\includegraphics[width=1\textwidth]{ie_nat.eps}
+\end{figure}
+
+
+\clearpage
+
+
+\begin{figure}[ht]
+	\centering
+		\includegraphics[width=1\textwidth]{it_nat.eps}
+\end{figure}
+
+
+\clearpage
+
+
+\begin{figure}[ht]
+	\centering
+		\includegraphics[width=1\textwidth]{lu_nat.eps}
+\end{figure}
+
+
+\clearpage
+
+
+\begin{figure}[ht]
+	\centering
+		\includegraphics[width=1\textwidth]{mt_nat.eps}
+\end{figure}
+
+
+\clearpage
+
+
+\begin{figure}[ht]
+	\centering
+		\includegraphics[width=1\textwidth]{nl_nat.eps}
+\end{figure}
+
+
+\clearpage
+
+
+\begin{figure}[ht]
+	\centering
+		\includegraphics[width=1\textwidth]{no_nat.eps}
+\end{figure}
+
+
+\clearpage
+
+
+\begin{figure}[ht]
+	\centering
+		\includegraphics[width=1\textwidth]{pl_nat.eps}
+\end{figure}
+
+
+\clearpage
+
+
+\begin{figure}[ht]
+	\centering
+		\includegraphics[width=1\textwidth]{pt_nat.eps}
+\end{figure}
+
+
+
+\clearpage
+
+
+\begin{figure}[ht]
+	\centering
+		\includegraphics[width=1\textwidth]{es_nat.eps}
+\end{figure}
+
+
+\clearpage
+
+\begin{figure}[ht]
+	\centering
+		\includegraphics[width=1\textwidth]{se_nat.eps}
+\end{figure}
+
+
+\clearpage
+
+\begin{figure}[ht]
+	\centering
+		\includegraphics[width=1\textwidth]{ch_nat.eps}
+\end{figure}
+
+
+\clearpage
+
+\begin{figure}[ht]
+	\centering
+		\includegraphics[width=1\textwidth]{uk_nat.eps}
+\end{figure}
+
+
+
+\clearpage
+
 
 \begin{landscape}
 
-\begin{figure}[ht]
-	\centering
-		\includegraphics[width=1\textwidth, angle=90]{at_nat.eps}
-\end{figure}
+%\subsection{Regional documents}
 
-
-\clearpage
-
-
-\begin{figure}[ht]
-	\centering
-		\includegraphics[width=1\textwidth, angle=90]{be_nat.eps}
-\end{figure}
-
-
-\clearpage
-
-
-\begin{figure}[ht]
-	\centering
-		\includegraphics[width=1\textwidth, angle=90]{cz_nat.eps}
-\end{figure}
-
-
-\clearpage
-
-
-\begin{figure}[ht]
-	\centering
-		\includegraphics[width=1\textwidth, angle=90]{dk_nat.eps}
-\end{figure}
-
-
-\clearpage
-
-
-\begin{figure}[ht]
-	\centering
-		\includegraphics[width=1\textwidth, angle=90]{ee_nat.eps}
-\end{figure}
-
-
-\clearpage
-
-
-\begin{figure}[ht]
-	\centering
-		\includegraphics[width=1\textwidth, angle=90]{fi_nat.eps}
-\end{figure}
-
-\clearpage
-
-
-\begin{figure}[ht]
-	\centering
-		\includegraphics[width=1\textwidth, angle=90]{fr_nat.eps}
-\end{figure}
-
-
-\clearpage
-
-\begin{figure}[ht]
-	\centering
-		\includegraphics[width=1\textwidth, angle=90]{de_nat.eps}
-\end{figure}
-
-
-\clearpage
-
-\begin{figure}[ht]
-	\centering
-		\includegraphics[width=1\textwidth, angle=90]{ie_nat.eps}
-\end{figure}
-
-
-\clearpage
-
-
-\begin{figure}[ht]
-	\centering
-		\includegraphics[width=1\textwidth, angle=90]{it_nat.eps}
-\end{figure}
-
-
-\clearpage
-
-
-\begin{figure}[ht]
-	\centering
-		\includegraphics[width=1\textwidth, angle=90]{lu_nat.eps}
-\end{figure}
-
-
-\clearpage
-
-
-\begin{figure}[ht]
-	\centering
-		\includegraphics[width=1\textwidth, angle=90]{mt_nat.eps}
-\end{figure}
-
-
-\clearpage
-
-
-\begin{figure}[ht]
-	\centering
-		\includegraphics[width=1\textwidth, angle=90]{nl_nat.eps}
-\end{figure}
-
-
-\clearpage
-
-
-\begin{figure}[ht]
-	\centering
-		\includegraphics[width=1\textwidth, angle=90]{no_nat.eps}
-\end{figure}
-
-
-\clearpage
-
-
-\begin{figure}[ht]
-	\centering
-		\includegraphics[width=1\textwidth, angle=90]{pl_nat.eps}
-\end{figure}
-
-
-\clearpage
-
-
-\begin{figure}[ht]
-	\centering
-		\includegraphics[width=1\textwidth, angle=90]{pt_nat.eps}
-\end{figure}
-
-
-\clearpage
-
-
-\begin{figure}[ht]
-	\centering
-		\includegraphics[width=1\textwidth, angle=90]{es_nat.eps}
-\end{figure}
-
-
-\clearpage
-
-\begin{figure}[ht]
-	\centering
-		\includegraphics[width=1\textwidth, angle=90]{se_nat.eps}
-\end{figure}
-
-
-\clearpage
-
-\begin{figure}[ht]
-	\centering
-		\includegraphics[width=1\textwidth, angle=90]{ch_nat.eps}
-\end{figure}
-
-
-\clearpage
-
-\begin{figure}[ht]
-	\centering
-		\includegraphics[width=1\textwidth, angle=90]{uk_nat.eps}
-\end{figure}
-
+\input{tab_regional_long}
 
 \end{landscape}
-
-\clearpage
-
-\subsection{Regional documents}
-
-%\input{tab_regional}
 
 \clearpage 
 
-\begin{landscape}
 
 \begin{figure}[ht]
 	\centering
-		\includegraphics[width=1\textwidth, angle=90]{at_reg.eps}
+		\includegraphics[width=1\textwidth]{at_reg.eps}
 \end{figure}
 
 \begin{figure}[ht]
 	\centering
-		\includegraphics[width=1\textwidth, angle=90]{be_reg.eps}
+		\includegraphics[width=1\textwidth]{be_reg.eps}
 \end{figure}
 
 \begin{figure}[ht]
 	\centering
-		\includegraphics[width=1\textwidth, angle=90]{cz_reg.eps}
+		\includegraphics[width=1\textwidth]{cz_reg.eps}
 \end{figure}
 
 \begin{figure}[ht]
 	\centering
-		\includegraphics[width=1\textwidth, angle=90]{de_reg.eps}
+		\includegraphics[width=1\textwidth]{de_reg.eps}
 \end{figure}
 
 \begin{figure}[ht]
 	\centering
-		\includegraphics[width=1\textwidth, angle=90]{es_reg.eps}
+		\includegraphics[width=1\textwidth]{es_reg.eps}
 \end{figure}
 
 \begin{figure}[ht]
 	\centering
-		\includegraphics[width=1\textwidth, angle=90]{nl_reg.eps}
+		\includegraphics[width=1\textwidth]{nl_reg.eps}
 \end{figure}
 
 \begin{figure}[ht]
 	\centering
-		\includegraphics[width=1\textwidth, angle=90]{se_reg.eps}
+		\includegraphics[width=1\textwidth]{se_reg.eps}
 \end{figure}
 
 \begin{figure}[ht]
 	\centering
-		\includegraphics[width=1\textwidth, angle=90]{ch_reg.eps}
+		\includegraphics[width=1\textwidth]{ch_reg.eps}
 \end{figure}
 
 \begin{figure}[ht]
 	\centering
-		\includegraphics[width=1\textwidth, angle=90]{uk_reg.eps}
+		\includegraphics[width=1\textwidth]{uk_reg.eps}
 \end{figure}
-
-\end{landscape}
 
 
 %\begin{thebibliography}{9}
 
 %\end{thebibliography}
+
 
 \end{document}
