--- a/codebook/polidoc_codebook.tex
+++ b/codebook/polidoc_codebook.tex
@@ -24,7 +24,9 @@ National and Regional Manifestos and other Political Documents Collected for the
 "The Impact of EU Cohesion Policy on European Identification" \\ (COHESIFY)
 } 
 
-\date{\today}
+\date{November 21, 2017
+%\today
+}
 
 \author{
 \small
@@ -32,7 +34,8 @@ Prepared by the Polidoc.net Team headed by \\ \small
  Thomas Bräuninger (University of Mannheim), \\ \small
  Marc Debus (University of Mannheim), \\ \small
  Kenneth Benoit (London School of Economics and Political Science) \\ \small
- and Julian Bernauer (Mannheim Centre for European Social Research)
+ and Julian Bernauer (Mannheim Centre for European Social Research) \\ \small
+doi: \url{http://dx.doi.org/10.5281/zenodo.1067701}
 }
 
 \maketitle
@@ -90,13 +93,17 @@ The structure of the files is as follows: Each file is labeled with a 5-digit co
 \newpage
 
 \section{Citation}
-The archive is maintained by Thomas Bräuninger (University of Mannheim), Marc Debus (University of Mannheim), Kenneth Benoit (London School of Economics and Political Science) and Julian Bernauer (Mannheim Centre for European Social Research). If data are used in publications etc. please refer to the Political Documents Archive as the data source by citing:
+The archive is maintained by Thomas Bräuninger (University of Mannheim), Marc Debus (University of Mannheim), Kenneth Benoit (London School of Economics and Political Science) and Julian Bernauer (Mannheim Centre for European Social Research). 
+The codebook has its own doi: \url{http://dx.doi.org/10.5281/zenodo.1067701} and is hosted on Zenodo (see \url{https://zenodo.org/record/1067701}). 
+If data are used in publications etc. please refer to the Political Documents Archive as the data source by citing:
 
 Kenneth Benoit, Thomas Bräuninger and Marc Debus. 2009. "Challenges for estimating policy preferences: Announcing an open access archive of political documents." \textit{German Politics} 18(3): 440-453.
+%, http://www.tandfonline.com/doi/abs/10.1080/09644000903055856.
 
 Please refer additionally to the following article when using data of parties from the regional level: 
 
 Martin Gross and Marc Debus. 2017. "Does EU regional policy increase parties' support for European integration?" \textit{West European Politics} (forthcoming).
+%, http://www.tandfonline.com/doi/full/10.1080/01402382.2017.1395249.
 
 \section{Feedback}
 Please contact us using the form on \url{http://www.polidoc.net}.
